# DeLASE

./: LICENSE  README.md  delase.py  dmd.py  env_create.sh  mp_delase-29401373  mp_delase.py  mp_delase.sh  mp_grid_search.py  parameter_choosing.py  performance_metrics.py  plot.py  pyproject.toml  setup.py  stability_estimation.py  utils.py
delase/: __init__.py  delase.py  dmd.py  grid_search.py  metrics.py  stability_estimation.py
demo/: 2024-08-27 - Damped VDP stability DeLASE Example.ipynb  2024-08-28 - Chaotic Net stability DeLASE Example.ipynb  2024-08-28 - Rossler stability analysis.ipynb  2024-09-16 - Chaotic stability analysis v2.ipynb  2024-09-16 - Chaotic stability analysis.ipynb  DeLASE Demo - Rossler stability analysis.ipynb  DeLASE Demo - VDP.ipynb  demo_utils.py  dysts_simulation.py
demo/data/: dynamical_systems.json
mutliprocessing_templates/: mp_test.sh  mp_testing.py  parameter_choosing.py
